--- a/package.json
+++ b/package.json
@@ -26,7 +26,8 @@
     "mysql2": "^2.3.3",
     "passport": "^0.5.2",
     "sequelize": "^6.12.1",
-    "stripe": "^8.195.0"
+    "stripe": "^8.195.0",
+    "dotenv": "^10.0.0"
   },
   "description": "",
   "devDependencies": {
