--- a/package.json
+++ b/package.json
@@ -20,14 +20,15 @@
   "dependencies": {
     "bcrypt": "^5.0.1",
     "connect-session-sequelize": "^7.1.2",
+    "dotenv": "^10.0.0",
     "express": "^4.17.2",
     "express-handlebars": "^6.0.2",
     "express-session": "^1.17.2",
     "mysql2": "^2.3.3",
+    "nodemailer": "^6.7.2",
     "passport": "^0.5.2",
     "sequelize": "^6.12.1",
-    "stripe": "^8.195.0",
-    "dotenv": "^10.0.0"
+    "stripe": "^8.195.0"
   },
   "description": "",
   "devDependencies": {
